@@ -3,104 +3,130 @@ package es.si.ProgramadorGenetico.WS;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.List;
 
 import javax.xml.namespace.QName;
 
+import es.si.ProgramadorGenetico.Interfaz.data.Configuracion;
+import es.si.ProgramadorGenetico.ProblemaAFP.AFP;
+import es.si.ProgramadorGenetico.ServiceWS.FASearcherService;
+import es.si.ProgramadorGenetico.ServiceWS.FASearcherServiceBeanService;
 import es.si.ProgramadorGenetico.util.Config;
 import es.si.fasearcherserver.GetProblemaRequest;
 import es.si.fasearcherserver.GetProblemaResponse;
 
 public class GetProblemaWS {
 
-	private Integer tamano;
-	
-	private String tipoAutomata;
-	
-	private Integer estados;
-	
-	private Integer pobMax;
-	
-	private Integer muestras;
-	
-	private Integer calculadorBondad;
-	
-	private Integer cruzador;
-	
-	private Integer mutador;
-	
-	private Integer resolver;
-	
 	private String id;
 	
 	private List<String> aceptadas;
 	
 	private List<String> rechazadas;
 	
+	private String descripcion;
+	
+	private Integer estados;
+	
+	private Integer pobMax;
+	
+	private String tipoAutomata;
+	
+	private List<Configuracion> configuraciones;
+	
+	private AFP afp;
+	
 	public boolean ejecutar() {
 		try {
-			QName service = new QName("http://ejb.FASearcherServer.si.es/", "FASearcherBeanService");
-			URL server = new URL(Config.getInstance().getProperty("FASearcherServer"));
-			//File file = new File("e:\\FASearcherBean.wsdl");
-			//System.out.println(file.toURI().toURL());
-			FASearcherBeanService fasbs = new FASearcherBeanService(server, service);
-			FASearcher fas = fasbs.getFASearcherBeanPort();
+			QName service = new QName("http://ejb.FASearcherServer.si.es/", "FASearcherServiceBeanService");
+			URL server;
+			if (!Config.getInstance().getProperty("FASearcherServiceServer").equals("classpath"))
+				server = new URL(Config.getInstance().getProperty("FASearcherServiceServer"));
+			else
+				server = ClassLoader.getSystemResource("FASearcherServiceBean.wsdl");
+
+			FASearcherServiceBeanService fasbs = new FASearcherServiceBeanService(server, service);
+			FASearcherService fas = fasbs.getFASearcherServiceBeanPort();
 			
 			GetProblemaRequest gpr = new GetProblemaRequest();
-			if (tamano != null)
-				gpr.setTamano(tamano);
-			if (tipoAutomata != null)
-				gpr.setTipoAutomata(tipoAutomata);
 			
-			GetProblemaResponse gpresponse = fas.getProblema(gpr);
+			if (id != null) {
+				gpr.setId(id);
+				
+				GetProblemaResponse gpresponse = fas.getProblema(gpr);
+				
+				if (gpresponse.getAceptadas() != null)
+					aceptadas = gpresponse.getAceptadas();
+				else
+					aceptadas = new ArrayList<String>();
+				
+				if (gpresponse.getRechazadas() != null)
+					rechazadas = gpresponse.getRechazadas();
+				else
+					rechazadas = new ArrayList<String>();
+				
+				descripcion = gpresponse.getDescripcion();
+				
+				estados = gpresponse.getEstados();
+				
+				pobMax = gpresponse.getPobMax();
+				
+				tipoAutomata = gpresponse.getTipoAutomata();
+				
+				configuraciones = new ArrayList<Configuracion>();
+				for (int i = 0; i < gpresponse.getConfiguraciones().size(); i++) {
+					Configuracion config = new Configuracion();
+					config.setCalculadorBondad(gpresponse.getConfiguraciones().get(i).getCalculadorBondad());
+					config.setCruzador(gpresponse.getConfiguraciones().get(i).getCruzador());
+					config.setEstados(gpresponse.getConfiguraciones().get(i).getEstados());
+					config.setMuestras(gpresponse.getConfiguraciones().get(i).getMuestras());
+					config.setMutador(gpresponse.getConfiguraciones().get(i).getMutador());
+					config.setPobMax(gpresponse.getConfiguraciones().get(i).getPobMax());
+					config.setResolver(gpresponse.getConfiguraciones().get(i).getResolver());
+					configuraciones.add(config);
+				}
+				
+				afp = new AFP(gpresponse.getAfp().getEstados().intValue());
+				
+				float[][][] transiciones = afp.getTransiciones();
 
-			estados = gpresponse.getEstados();
-			id = gpresponse.getId();
+				List<String> lista = gpresponse.getAfp().getTransiciones();
+				Iterator<String> it = lista.iterator();
+				while (it.hasNext()) {
+					String temp = it.next();
+					String[] partes = temp.split(":");
+					int entrada = Integer.parseInt(partes[1]);
+					int estado = Integer.parseInt(partes[0]);
+
+					String[] valores = partes[2].split(";");
+					for (int i = 0; i < valores.length; i++) {
+						System.out.println("Entrada: " + entrada + " Estado: " + estado + " Valor: " + valores[i]);
+						transiciones[estado][entrada][i] = Float.parseFloat(valores[i]);
+					}
+				}
+				afp.setTransiciones(transiciones);
+
+				float[] finales = afp.getProbabilidadesFinal();
+				String[] probs = gpresponse.getAfp().getProbFinales().split(";");
+				for (int i = 0; i < probs.length; i++) {
+					finales[i] = Float.parseFloat(probs[i]);
+				}
+				afp.setProbabilidadFinal(finales);
+			} else {
+				id = "-1";
+			}
 			
-			aceptadas = new ArrayList<String>();
-			String[] arrayAceptadas = gpresponse.getAceptadas().split("\\,");
-			for (int i = 0; i < arrayAceptadas.length; i++)
-				aceptadas.add(arrayAceptadas[i]);
-			
-			rechazadas = new ArrayList<String>();
-			String[] arrayRechazadas = gpresponse.getRechazadas().split("\\,");
-			for (int i = 0; i < arrayRechazadas.length; i++)
-				rechazadas.add(arrayRechazadas[i]);
-			
-			muestras = gpresponse.getMuestras();
-			pobMax = gpresponse.getPobMax();
-			tipoAutomata = gpresponse.getTipoAutomata();
-			calculadorBondad = gpresponse.getCalculadorBondad();
-			cruzador = gpresponse.getCruzador();
-			mutador = gpresponse.getMutador();
-			resolver = gpresponse.getResolver();
 		}  catch (MalformedURLException e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
+			id = "-1";
+		} catch (Exception e) {
+			e.printStackTrace();
+			id = "-1";
 		}
 	
 		
 		return true;
-	}
-
-	public String getTipoAutomata() {
-		return tipoAutomata;
-	}
-
-	public void setTipoAutomata(String tipoAutomata) {
-		this.tipoAutomata = tipoAutomata;
-	}
-
-	public Integer getEstados() {
-		return estados;
-	}
-
-	public Integer getPobMax() {
-		return pobMax;
-	}
-
-	public String getId() {
-		return id;
 	}
 
 	public List<String> getAceptadas() {
@@ -111,28 +137,37 @@ public class GetProblemaWS {
 		return rechazadas;
 	}
 
-	public void setTamano(Integer tamano) {
-		this.tamano = tamano;
+	public String getDescripcion() {
+		return descripcion;
 	}
 
-	public Integer getMuestras() {
-		return muestras;
+	public Integer getEstados() {
+		return estados;
 	}
 
-	public Integer getCalculadorBondad() {
-		return calculadorBondad;
+	public Integer getPobMax() {
+		return pobMax;
 	}
 
-	public Integer getCruzador() {
-		return cruzador;
+	public String getTipoAutomata() {
+		return tipoAutomata;
 	}
 
-	public Integer getMutador() {
-		return mutador;
+	public List<Configuracion> getConfiguraciones() {
+		return configuraciones;
 	}
 
-	public Integer getResolver() {
-		return resolver;
+	public AFP getAfp() {
+		return afp;
 	}
+
+	public void setId(String id) {
+		this.id = id;
+	}
+
+	public String getId() {
+		return id;
+	}
+
 	
 }
